# clicky

./: .gitattributes  .gitignore  Cargo.toml  DEVGUIDE.md  README.md
.github/workflows/: lint.yml
clicky-core/: Cargo.toml
clicky-core/src/: error.rs  lib.rs
clicky-core/src/block/: mod.rs
clicky-core/src/block/backend/: mod.rs  null.rs
clicky-core/src/devices/: mod.rs  prelude.rs
clicky-core/src/devices/display/: hd66753.rs  mod.rs
clicky-core/src/devices/generic/: asanram.rs  mod.rs  ram.rs  stub.rs
clicky-core/src/devices/generic/ide/: identify.rs  mod.rs  reg.rs
clicky-core/src/devices/i2c/: mod.rs  prelude.rs
clicky-core/src/devices/i2c/devices/: mod.rs  pcf5060x.rs
clicky-core/src/devices/platform/: mod.rs  pp.rs
clicky-core/src/devices/platform/pp/: cachecon.rs  cpuid.rs  devcon.rs  dma.rs  eide.rs  evp.rs  flash.rs  gpio.rs  i2c.rs  i2s.rs  intcon.rs  memcon.rs  opto.rs  piezo.rs  pwm.rs  serial.rs  usec_timer.rs
clicky-core/src/devices/platform/pp/i2c/: pcf5060x.rs
clicky-core/src/devices/platform/pp/timers/: cfg_timer.rs  mod.rs
clicky-core/src/devices/util/: arcmutex.rs  mem_sniffer.rs
clicky-core/src/executor/: mod.rs
clicky-core/src/gui/: mod.rs
clicky-core/src/memory/: access.rs  armv4t_adaptor.rs  mod.rs
clicky-core/src/signal/: gpio.rs  irq.rs  mod.rs
clicky-core/src/sys/ipod4g/: controls.rs  gdb.rs  mod.rs
clicky-desktop/: Cargo.toml  README.md
clicky-desktop/src/: blockcfg.rs  gdb.rs  main.rs
clicky-desktop/src/backends/: minifb.rs  mod.rs
clicky-desktop/src/controls/: mod.rs
clicky-desktop/src/controls/minifb/: ipod4g.rs
clicky-web/: Cargo.toml  README.md
clicky-web/src/: lib.rs
clicky-web/www/: .gitignore  clicky.worker.js  index.html  index.js  main.css  package-lock.json  package.json  webpack.config.js
clicky-web/www/resources/: README.md
docs/: ARCHITECTURE.md  DEVGUIDE.md  QUICKSTART.md  REPO_LAYOUT.md
relativity/: Cargo.toml  README.md
relativity/src/: lib.rs
resources/: .gitignore  NOTES.md  ipodloader_deadbeefs_unopt.objdump  links.txt
resources/documentation/: README.md  memory_controller.txt
resources/documentation/Rockbox/: ipod4g.h  pp5020.h
resources/flashutils/: .gitignore  flashsplit.c  ipodloader_diagmode.sh
resources/ipodloader/: .gdbinit  .gitignore  ChangeLog  Makefile  README  README.md  arm_elf_40.x  getopt.c  happymac.c  loader.c  make_fw.c  startup.s  tools.c  tools.h  tux.c  xpm2src.pl
resources/ipodloader/pics/: happymac.xpm
resources/ipodloader2/: .gdbinit  .gitignore  Makefile  README.md  TODO  arm_elf_40.x  ata2.c  ata2.h  bootloader.h  config.c  config.h  console.c  console.h  ext2.c  ext2.h  fat32.c  fat32.h  fb.c  fb.h  fontlarge.h  fontmedium.h  fontsmall.h  fwfs.c  fwfs.h  hfsplusstructs.h  interrupt-entry.s  interrupts.c  interrupts.h  ipodhw.c  ipodhw.h  keypad.c  keypad.h  loader.c  loader.elf  lockicon.h  macpartitions.cc  macpartitions.h  menu.c  menu.h  minilibc.c  (+5 more)
resources/ipodloader2/getLoader2Args/: Makefile  getLoader2Args.c  readme.txt
scripts/: add_ipodloader_cfg_to_rawhd.sh  copy_rockbox_to_rawhd.sh  mkipodhd_raw.sh  patch_aupd_bit.sh
scripts/rawhd/: add_ipodloader_cfg.sh  copy_rockbox.sh  loopback_delete.sh  loopback_setup.sh
src/: firmware.rs  gdb.rs  irq.rs  lib.rs  main.rs  memory.rs  ram.rs  util.rs
src/block/: cfg.rs  mod.rs  null.rs  raw.rs
src/block/backend/: mem.rs  mod.rs  null.rs  raw.rs
src/debugger/: asm2line.rs  mod.rs
src/devices/: _newdev.rs  asanram.rs  cpucon.rs  cpuid.rs  devcon.rs  eide.rs  fakeflash.rs  flash.rs  gpio.rs  hd66753.rs  hle_flash.rs  i2c.rs  intcon.rs  memcon.rs  mod.rs  ppcon.rs  prelude.rs  syscontrol.rs
src/devices/display/: hd66753.rs  mod.rs
src/devices/generic/: asanram.rs  ide.rs  mod.rs  stub.rs
src/devices/generic/ide/: identify.rs  mod.rs
src/devices/platform/: mod.rs  pp.rs
src/devices/platform/pp/: cachecon.rs  cpucon.rs  cpuid.rs  devcon.rs  dma.rs  eide.rs  flash.rs  gpio.rs  i2c.rs  i2s.rs  intcon.rs  mailbox.rs  memcon.rs  piezo.rs  ppcon.rs  serial.rs
src/devices/platform/pp/timers/: cfg_timer.rs  mod.rs  usec_timer.rs
src/devices/syscon/: mod.rs
src/devices/timers/: cfg_timer.rs  irq_timer.rs  mod.rs  usec_timer.rs
src/devices/util/: arcmutex.rs  mem_sniffer.rs  mod.rs
src/executor/: mod.rs
src/gui/: minifb.rs  mod.rs
src/memory/: access.rs  armv4t_adaptor.rs  exception.rs  mod.rs
src/registers/: cpu_controller.rs  cpuid.rs  mod.rs
src/signal/: gpio.rs  irq.rs  mod.rs
src/sys/: mod.rs
src/sys/ipod4g/: firmware.rs  gdb.rs  hle_bootloader.rs  mod.rs
src/sys/ipod4g/gui/: minifb.rs  mod.rs  null.rs
src/sys/ipod4g/hle_bootloader/: firmware.rs  mod.rs  sysinfo.rs
src/util/: mem_logger.rs  mem_sniffer.rs  mod.rs
