[package]
name = "clicky"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[dependencies]
armv4t_emu = "0.1"
bit_field = "0.10.0"
bytemuck = "1.2"
byteorder = "1.3"
bytesize = "1.0"
crossbeam-channel = "0.4"
gdbstub = { version = "0.1", features = ["std"] }
human-size = "0.4"
log = "0.4"
minifb = "0.16"
num_enum = "0.5.0"
pretty_env_logger = "0.3"
static_assertions = "1.1"
structopt = "0.3"
termion = "1.5"
thiserror = "1.0"

[profile.dev.package."*"]
opt-level = 3
