[package]
name = "clicky"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[features]
default = ["minifb"]

[dependencies]
# logging
log = "0.4"
pretty_env_logger = "0.3"

# CLI
human-size = "0.4"
structopt = "0.3"

# GUI
minifb = { version =  "0.16", optional = true }

# general utilities
bit_field = "0.10"
bytemuck = "1.2"
byteorder = "1.3"
cfg-if = "0.1"
num_enum = "0.5"
static_assertions = "1.1"
thiserror = "1.0"

# emulation related
armv4t_emu = "0.1"
gdbstub = "0.2"

# async/await
async-channel = "1.1"
async-timer = "1.0.0-beta.4"
futures-executor = "0.3" # TEMP?
pin-utils = "0.1"
[dependencies.futures]
version = "0.3"
default-features = false
features = []

[profile.dev.package."*"]
opt-level = 3
