[package]
name = "clicky-core"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[features]
wasm-bindgen = [ "relativity/wasm-bindgen", "chrono/wasmbind" ]

[dependencies]
# home-grown deps
relativity = { path = "../relativity/" }

# general utilities
bit_field = "0.10"
bytemuck = "1.2"
byteorder = "1.3"
cfg-if = "0.1"
chrono = "0.4"
log = "0.4"
num_enum = "0.5"
static_assertions = "1.1"
thiserror = "1.0"

# emulation related
armv4t_emu = "0.1"
gdbstub = "0.4"

# async/await
async-channel = "1.4"
blocking = "0.5"
futures-executor = { version = "0.3", features = ["thread-pool"] } # TEMP
pin-utils = "0.1"
[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]
