[package]
name = "clicky-web"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clicky-core = { path = "../" }

console_error_panic_hook = "0.1"
console_log = { version ="0.2", features = ["color"] }
log = "0.4"
wasm-bindgen = "0.2.63"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
]
