[package]
name = "clicky-web"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clicky-core = { path = "../", features = ["wasm-bindgen"] }

console_error_panic_hook = "0.1"
console_log = { version ="0.2", features = ["color"] }
fern = "0.5"
flate2 = "1.0"
log = "0.4"
wasm-bindgen = "0.2.63"
